@@ -1,7 +1,7 @@
 #  File src/library/stats/R/ecdf.R
 #  Part of the R package, https://www.R-project.org
 #
-#  Copyright (C) 1995-2014 The R Core Team
+#  Copyright (C) 1995-2016 The R Core Team
 #
 #  This program is free software; you can redistribute it and/or modify
 #  it under the terms of the GNU General Public License as published by
@@ -60,7 +60,7 @@ summary.ecdf <- function(object, ...)
 print.summary.ecdf <- function(x, ...)
 {
     cat(attr(x, "header"))
-    y <- unclass(x); attr(y, "header") <- NULL
+    y <- x; attr(y, "header") <- NULL; class(y) <- "summaryDefault"
     print(y, ...)
     invisible(x)
 }
