@@ -1,5 +1,5 @@
 
-R Under development (unstable) (2016-08-16 r71104) -- "Unsuffered Consequences"
+R Under development (unstable) (2016-08-25 r71148) -- "Unsuffered Consequences"
 Copyright (C) 2016 The R Foundation for Statistical Computing
 Platform: x86_64-pc-linux-gnu (64-bit)
 
@@ -4830,16 +4830,16 @@ attr(,"legend")
 > ## "pairwise" is closer componentwise,
 > summary(abs(c(1 - Rp/R.)))
    Min. 1st Qu.  Median    Mean 3rd Qu.    Max. 
-0.00000 0.00000 0.04481 0.09573 0.15210 0.53940 
+0.00000 0.00000 0.04481 0.09573 0.15214 0.53941 
 > summary(abs(c(1 - Rc/R.)))
    Min. 1st Qu.  Median    Mean 3rd Qu.    Max. 
-0.00000 0.02020 0.08482 0.50670 0.16190 7.08500 
+0.00000 0.02021 0.08482 0.50675 0.16192 7.08509 
 > 
 > ## but "complete" is closer in Eigen space:
 > EV <- function(m) eigen(m, only.values=TRUE)$values
 > summary(abs(1 - EV(Rp)/EV(R.)) / abs(1 - EV(Rc)/EV(R.)))
    Min. 1st Qu.  Median    Mean 3rd Qu.    Max. 
- 0.8942  1.1460  1.2450  1.3730  1.3720  2.3270 
+ 0.8942  1.1464  1.2452  1.3732  1.3722  2.3265 
 > 
 > 
 > 
@@ -6433,7 +6433,7 @@ Call: ecdf(x)
 > summary(Fn)
 Empirical CDF:	  12 unique values with summary
    Min. 1st Qu.  Median    Mean 3rd Qu.    Max. 
--0.8356 -0.3857  0.3597  0.2686  0.6164  1.5950 
+-0.8356 -0.3857  0.3597  0.2686  0.6164  1.5953 
 > ##--> see below for graphics
 > knots(Fn)  # the unique data values {12 of them if there were no ties}
  [1] -0.8356286 -0.8204684 -0.6264538 -0.3053884  0.1836433  0.3295078
@@ -6483,7 +6483,7 @@ yright :  num 1
 > summary(F10)
 Empirical CDF:	  10 unique values with summary
     Min.  1st Qu.   Median     Mean  3rd Qu.     Max. 
--1.47100 -0.14250 -0.05497  0.04667  0.41040  1.35900 
+-1.47075 -0.14254 -0.05497  0.04667  0.41037  1.35868 
 > 
 > plot(F10)
 > plot(F10, verticals = TRUE, do.points = FALSE)
@@ -16040,8 +16040,8 @@ f.f1c  1.0 1.00    1 2.00  2.0 2.00    2 4.00  4.0  4.00     4  3.00   3.0
    %  85.6         16.5      11.3         100.0 
 
  Weights:
-     Min.   1st Qu.    Median      Mean   3rd Qu.      Max. 
-0.0000000 0.5594126 0.9451991 0.7312186 0.9853375 1.0000000 
+   Min. 1st Qu.  Median    Mean 3rd Qu.    Max. 
+ 0.0000  0.5594  0.9452  0.7312  0.9853  1.0000 
 
  Other components: List of 5
  $ win  : Named num [1:3] 721 19 13
